--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "watch": "tsc -w --pretty false --outDir watch",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
-    "start:local": "cross-env NODE_ENV=local nest start --watch",
+    "start:local": "cross-env NODE_ENV=local nest start --watch --watchAssets",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -24,6 +25,7 @@
     "export-types": "pnpm run export-client-types && pnpm run export-swagger-docs"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -38,7 +40,9 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "handlebars": "^4.7.7",
     "mongodb": "^3.7.3",
+    "nodemailer": "^6.7.7",
     "openapi-typescript-codegen": "^0.23.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
@@ -54,6 +58,7 @@
     "@types/jest": "28.1.4",
     "@types/mongodb": "^3.6.20",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
