--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -22,5 +22,11 @@
         "./src/types"
       ]
     }
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "./src/**/*.ts"
+  ]
 }
