--- a/api/package.json
+++ b/api/package.json
@@ -57,6 +57,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
     "@types/mongodb": "^3.6.20",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.11",
