--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "watch": "tsc -w --pretty false --outDir watch",
+    "tsc": "tsc -w --pretty false --noEmit",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:local": "cross-env NODE_ENV=local nest start --watch --watchAssets",
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.0.4",
+    "@types/uuid": "^9.0.0",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -49,6 +50,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "uuid": "^9.0.0",
     "winston": "^3.8.1"
   },
   "devDependencies": {
