--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "export-client-types": "cross-env NODE_ENV=export ts-node -r tsconfig-paths/register  ./src/open-api/export-client-types.ts",
     "export-swagger-docs": "cross-env NODE_ENV=export ts-node -r tsconfig-paths/register  ./src/open-api/export-swagger-docs.ts",
-    "export-types": "pnpm run export-client-types && pnpm run export-swagger-docs"
+    "export-types": "pnpm run export-client-types && pnpm run export-swagger-docs",
+    "send": "ts-node -r tsconfig-paths/register ./src/send.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
@@ -33,6 +34,7 @@
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.0.4",
     "@types/uuid": "^9.0.0",
+    "aws-sdk": "^2.1265.0",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -44,7 +46,6 @@
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "mongodb": "^3.7.3",
-    "nodemailer": "^6.7.7",
     "openapi-typescript-codegen": "^0.23.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
