--- a/api/.env.local
+++ b/api/.env.local
@@ -1,4 +1,5 @@
-SUBMISSION_ERROR_TOLERANCE=1000
+SUBMISSION_ERROR_TOLERANCE=1
+REGISTRATION_COST=100
 DB_URL=mongodb://localhost:27017/bcr
 DB_ENABLED=true
 #REGISTRY_PUBLIC_KEY=bc1qxfs0vay9lqwcz7seku0r2xnzr87hl467hyf9qq
