--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,7 @@
     "start:local": "cross-env NODE_ENV=local nest start --watch --watchAssets",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest --runInBand",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
