--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3005",
   "dependencies": {
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
