--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Node.js
+        working-directory: ./api
         uses: actions/setup-node@v3
         with:
           node-version: '16'
@@ -29,6 +30,13 @@ jobs:
       - name: API Lint
         working-directory: ./api
         run: npm run lint
+
+      - name: Set up Node.js
+        working-directory: ./client
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'npm'
 
       - name: Client Install
         working-directory: ./client
