--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,47 +1,47 @@
-name: Crypto Registry
-
-on:
-  push:
-    branches-ignore:
-    - prod
-
-jobs:
-  registry-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        working-directory: ./api
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-          cache: 'npm'
-
-      - name: API Install
-        working-directory: ./api
-        run: npm install
-
-      - name: API Tests
-        working-directory: ./api
-        run: npm run test
-
-      - name: API Lint
-        working-directory: ./api
-        run: npm run lint
-
-      - name: Set up Node.js
-        working-directory: ./client
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-          cache: 'npm'
-
-      - name: Client Install
-        working-directory: ./client
-        run: npm install
-
-      - name: Client Lint
-        working-directory: ./clint
-        run: npm run lint
+#name: Crypto Registry
+#
+#on:
+#  push:
+#    branches-ignore:
+#    - prod
+#
+#jobs:
+#  registry-tests:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      - name: Set up Node.js
+#        working-directory: ./api
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: '16'
+#          cache: 'npm'
+#
+#      - name: API Install
+#        working-directory: ./api
+#        run: npm install
+#
+#      - name: API Tests
+#        working-directory: ./api
+#        run: npm run test
+#
+#      - name: API Lint
+#        working-directory: ./api
+#        run: npm run lint
+#
+#      - name: Set up Node.js
+#        working-directory: ./client
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: '16'
+#          cache: 'npm'
+#
+#      - name: Client Install
+#        working-directory: ./client
+#        run: npm install
+#
+#      - name: Client Lint
+#        working-directory: ./clint
+#        run: npm run lint
