--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "send": "ts-node -r tsconfig-paths/register ./src/send.ts"
   },
   "dependencies": {
+    "@mempool/mempool.js": "^2.3.0",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -52,6 +53,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "winston": "^3.8.1"
   },
   "devDependencies": {
