Functions for generate keys.

--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,8 @@
     "@types/uuid": "^9.0.0",
     "aws-sdk": "^2.1265.0",
     "axios": "^0.27.2",
+    "bip32": "^3.1.0",
+    "bip39": "^3.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
@@ -44,16 +46,20 @@
     "cross-env": "^7.0.3",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
+    "ecpair": "^2.1.0",
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
+    "hdkey": "^2.0.1",
     "mongodb": "^3.7.3",
     "openapi-typescript-codegen": "^0.23.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "tiny-secp256k1": "^2.2.1",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
+    "wif": "^2.0.6",
     "winston": "^3.8.1"
   },
   "devDependencies": {
@@ -61,6 +67,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/hdkey": "^2.0.1",
     "@types/jest": "28.1.4",
     "@types/mongodb": "^3.6.20",
     "@types/multer": "^1.4.7",
