--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.27.2",
     "bip32": "^3.1.0",
     "bip39": "^3.0.4",
+    "bitcoinjs-lib": "^6.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
