bip84 wallet balance

--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.27.2",
     "bip32": "^3.1.0",
     "bip39": "^3.0.4",
+    "bip84": "^0.2.7",
     "bitcoinjs-lib": "^6.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -51,6 +52,7 @@
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "hdkey": "^2.0.1",
+    "moment": "^2.29.4",
     "mongodb": "^3.7.3",
     "openapi-typescript-codegen": "^0.23.0",
     "path": "^0.12.7",
