--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3005",
   "dependencies": {
     "axios": "^1.2.1",
+    "bip84": "^0.2.7",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
