--- a/api/package.json
+++ b/api/package.json
@@ -47,6 +47,7 @@
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "csv-parser": "^3.0.0",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.1",
     "ecpair": "^2.1.0",
     "express": "^4.18.1",
