--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3005",
   "dependencies": {
+    "array-buffer-to-hex": "^1.0.0",
     "axios": "^1.2.1",
     "bip84": "^0.2.7",
     "bootstrap": "^5.2.3",
