--- a/api/package.json
+++ b/api/package.json
@@ -53,6 +53,7 @@
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "hdkey": "^2.0.1",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^3.7.3",
     "openapi-typescript-codegen": "^0.23.0",
@@ -73,6 +74,7 @@
     "@types/express": "^4.17.13",
     "@types/hdkey": "^2.0.1",
     "@types/jest": "28.1.4",
+    "@types/lodash": "^4.14.191",
     "@types/mongodb": "^3.6.20",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
