--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.0.4",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/uuid": "^9.0.0",
     "aws-sdk": "^2.1265.0",
     "axios": "^0.27.2",
@@ -53,6 +54,7 @@
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "hdkey": "^2.0.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^3.7.3",
