--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
     "tsc": "tsc -w --pretty false --noEmit",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:local": "cross-env NODE_ENV=local nest start --watch --watchAssets",
+    "start:node": "nest start --watch --watchAssets",
+    "start:local": "cross-env NODE_ENV=node-1 nest start --watch --watchAssets",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
@@ -20,8 +21,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "export-client-types": "cross-env NODE_ENV=local ts-node -r tsconfig-paths/register ./src/open-api/export-client-types.ts",
-    "export-swagger-docs": "cross-env NODE_ENV=local ts-node -r tsconfig-paths/register ./src/open-api/export-swagger-docs.ts",
+    "export-client-types": "cross-env NODE_ENV=node-1 ts-node -r tsconfig-paths/register ./src/open-api/export-client-types.ts",
+    "export-swagger-docs": "cross-env NODE_ENV=node-1 ts-node -r tsconfig-paths/register ./src/open-api/export-swagger-docs.ts",
     "export-types": "pnpm run export-client-types && pnpm run export-swagger-docs",
     "send": "ts-node -r tsconfig-paths/register ./src/send.ts"
   },
