--- a/api/package.json
+++ b/api/package.json
@@ -33,8 +33,10 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.2.1",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.0.4",
+    "@nestjs/websockets": "^9.2.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/uuid": "^9.0.0",
     "aws-sdk": "^2.1265.0",
@@ -64,6 +66,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "socket.io": "^4.5.4",
     "tiny-secp256k1": "^2.2.1",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
