Verification Testing and Node Selection

--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:node": "nest start --watch --watchAssets",
-    "start:local": "cross-env NODE_ENV=node-1 nest start --watch --watchAssets",
+    "start:rob-node": "cross-env NODE_ENV=rob-node nest start --watch --watchAssets",
+    "start:node-1": "cross-env NODE_ENV=node-1 nest start --watch --watchAssets",
+    "start:node-2": "cross-env NODE_ENV=node-2 nest start --watch --watchAssets",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
