--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "array-buffer-to-hex": "^1.0.0",
     "axios": "^1.2.1",
     "bip84": "^0.2.7",
@@ -51,7 +52,6 @@
     "styled-components": "^5"
   },
   "devDependencies": {
-    "typescript": "^4.7.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -59,6 +59,7 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/styled-components": "^5.1.25"
+    "@types/styled-components": "^5.1.25",
+    "typescript": "^4.7.4"
   }
 }
