--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "stop:2": "docker container stop deposts-registry",
     "rm:2": "docker container rm deposits-registry",
     "start:2": "docker run -d -p 3001:3001 --env-file ./api/.env.node-2 --name deposts-registry bcr",
-    "logs;2": "docker logs --follow deposts-registry",
-    "restart": "restart:1 && restart:2"
+    "logs:2": "docker logs --follow deposts-registry",
+    "restart": "npm run restart:1 && npm run restart:2"
   }
 }
 
