--- a/package.json
+++ b/package.json
@@ -4,16 +4,31 @@
     "restart:1": "docker container restart bitcoin-registry",
     "stop:1": "docker container stop bitcoin-registry",
     "rm:1": "docker container rm bitcoin-registry",
-    "start:1": "docker run -d -p 3000:3000 --env-file ./api/.env.node-1 --name bitcoin-registry bcr",
+    "start:1": "docker run -d -p 3000:3000 --env-file ./api/.env.bitcoin-registry --name bitcoin-registry bcr",
     "logs:1": "docker logs -f bitcoin-registry",
+
     "restart:2": "docker container restart deposits-registry",
     "stop:2": "docker container stop deposits-registry",
     "rm:2": "docker container rm deposits-registry",
-    "start:2": "docker run -d -p 3001:3001 --env-file ./api/.env.node-2 --name deposits-registry bcr",
+    "start:2": "docker run -d -p 3001:3001 --env-file ./api/.env.deposits-registry --name deposits-registry bcr",
     "logs:2": "docker logs --follow deposits-registry",
-    "stop": "npm run stop:1 && npm run stop:2",
-    "rm": "docker rm bitcoin-registry && docker rm deposits-registry",
-    "start": "npm run start:1 && npm run start:2",
+
+    "restart:3": "docker container restart deposits-registry-2",
+    "stop:3": "docker container stop deposits-registry-2",
+    "rm:3": "docker container rm deposits-registry-2",
+    "start:3": "docker run -d -p 3002:3002 --env-file ./api/.env.deposits-registry-2 --name deposits-registry-2 bcr",
+    "logs:3": "docker logs --follow deposits-registry-2",
+
+    "restart:4": "docker container restart deposits-registry-3",
+    "stop:4": "docker container stop deposits-registry-3",
+    "rm:4": "docker container rm deposits-registry-3",
+    "start:4": "docker run -d -p 3003:3003 --env-file ./api/.env.deposits-registry-3 --name deposits-registry-3 bcr",
+    "logs:4": "docker logs --follow deposits-registry-3",
+
+    "stop": "npm run stop:1 && npm run stop:2 && npm run stop:3 && npm run stop:4",
+    "rm": "npm run rm:1 && npm run rm:2 && npm run rm:3 && npm run rm:4",
+    "start": "npm run start:1 && npm run start:2 && npm run start:3 && npm run start:4",
+
     "release": "npm run build && npm run stop && npm run rm && npm run start"
   }
 }
