--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.2.1",
     "bip84": "^0.2.7",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "env-cmd": "^10.1.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
