--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.2.1",
+    "@nestjs/schedule": "^2.2.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.0.4",
     "@nestjs/websockets": "^9.2.1",
