--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.29.3",
     "env-cmd": "^10.1.0",
     "http-proxy-middleware": "^2.0.6",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
@@ -54,6 +55,7 @@
     "styled-components": "^5"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
