--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "node-1": "env-cmd -f .env.node-1 react-scripts start",
     "node-2": "env-cmd -f .env.node-2 react-scripts start",
+    "node-3": "env-cmd -f .env.node-3 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
