--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "tsc": "tsc -w --pretty false --noEmit",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:node": "nest start --watch --watchAssets",
+    "start:node": "nest start",
     "start:rob-node": "cross-env NODE_ENV=rob-node nest start --watch --watchAssets",
     "start:node-1": "cross-env NODE_ENV=node-1 nest start --watch --watchAssets",
     "start:node-2": "cross-env NODE_ENV=node-2 nest start --watch --watchAssets",
@@ -24,6 +24,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "generate-security-keys": "ts-node -r tsconfig-paths/register src/authentication/generate-security-keys.ts",
     "export-client-types": "cross-env NODE_ENV=node-1 ts-node -r tsconfig-paths/register ./src/open-api/export-client-types.ts",
     "export-swagger-docs": "cross-env NODE_ENV=node-1 ts-node -r tsconfig-paths/register ./src/open-api/export-swagger-docs.ts",
     "export-types": "pnpm run export-client-types && pnpm run export-swagger-docs",
