--- a/api/package.json
+++ b/api/package.json
@@ -72,11 +72,13 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "socket.io": "^4.5.4",
+    "socket.io-client": "^4.6.1",
     "tiny-secp256k1": "^2.2.1",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "wif": "^2.0.6",
-    "winston": "^3.8.1"
+    "winston": "^3.8.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -90,6 +92,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.5",
+    "@types/socket.io-client": "^3.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
