--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     "@nestjs/websockets": "^9.2.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/uuid": "^9.0.0",
+    "@types/ws": "^8.5.4",
     "aws-sdk": "^2.1265.0",
     "axios": "^0.27.2",
     "bip32": "^3.1.0",
