--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "send": "ts-node -r tsconfig-paths/register ./src/send.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.362.0",
     "@mempool/mempool.js": "^2.3.0",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/common": "^9.0.0",
