--- a/api/.env.example
+++ b/api/.env.example
@@ -1,3 +1,5 @@
+AWS_ACCESS_KEY_ID=<id for use with aws logging>
+AWS_SECRET_ACCESS_KEY=<secret for use with aws logging>
 DB_URL=<your mongodb url>
 AWS_SES_REGION=eu-west-2
 AWS_SES_ACCESS_KEY_ID=<Your SES client key>
@@ -12,6 +14,7 @@ MAINNET_REGISTRY_ZPUB=zpub6qTmFCuJmF82aFKFUSYRV8n368hRkiEt5wyWJb2iEPVS4Jd9Ztmbsz
 HASH_ALGORITHM=sha256
 DOCS_URL=<Your domain>/docs
 LOG_LEVEL=debug
+LOGGER_SERVICE=aws or console
 BITCOIN_API=blockstream
 LOCAL_ADDRESS=<Your domain>
 CLIENT_ADDRESS=<Your domain>
