Fixed network verifications

--- a/api/.env.example
+++ b/api/.env.example
@@ -16,6 +16,9 @@ DOCS_URL=<Your domain>/docs
 LOG_LEVEL=debug
 LOGGER_SERVICE=aws or console
 BITCOIN_API=blockstream
+BITCOIN_CORE_TESTNET_URL=<url of your bitcoin core testnet node>
+BITCOIN_CORE_TESTNET_PASSWORD=<password>
+BITCOIN_CORE_TESTNET_USERNAME=<username>
 LOCAL_ADDRESS=<Your domain>
 CLIENT_ADDRESS=<Your domain>
 NODE_NAME=<Your Node Name>
