--- a/api/package.json
+++ b/api/package.json
@@ -53,6 +53,7 @@
     "bip39": "^3.0.4",
     "bip84": "^0.2.7",
     "bitcoinjs-lib": "^6.1.0",
+    "bitcoinjs-message": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
