--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,7 @@
     "start:node-2": "cross-env NODE_ENV=node-2 nest start --watch --watchAssets",
     "start:node-3": "cross-env NODE_ENV=node-3 nest start --watch --watchAssets",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "env-cmd -f ./.env.single-node node ./dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest --runInBand --detectOpenHandles",
     "test:watch": "jest --watch",
@@ -63,6 +63,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.1",
     "ecpair": "^2.1.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "hdkey": "^2.0.1",
