--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
+    "antd": "^5.12.8",
+    "@ant-design/icons": "^5.2.6",
     "array-buffer-to-hex": "^1.0.0",
     "bip84": "^0.2.7",
     "bootstrap": "^5.2.3",
@@ -15,14 +17,14 @@
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.1",
-    "react-icons": "^4.7.1",
+    "react-hook-form": "^7.49.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.1.4"
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "node-1": "env-cmd -f .env.node-1 react-scripts start",
@@ -55,15 +57,15 @@
     "styled-components": "^5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/lodash.debounce": "^4.0.7",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^16.11.45",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.25",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   }
 }
