--- a/api/package.json
+++ b/api/package.json
@@ -34,17 +34,18 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.362.0",
     "@mempool/mempool.js": "^2.3.0",
-    "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/schedule": "^2.2.0",
-    "@nestjs/serve-static": "^3.0.0",
-    "@nestjs/swagger": "^6.0.4",
-    "@nestjs/websockets": "^9.2.1",
+    "@nestjs-modules/mailer": "^1.10.3",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@nestjs/websockets": "^10.3.0",
     "@react-email/components": "^0.0.12",
+    "@react-email/render": "^0.0.10",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/react": "^18.2.46",
     "@types/uuid": "^9.0.0",
@@ -89,16 +90,16 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.0",
+    "@types/express": "^4.17.21",
     "@types/hdkey": "^2.0.1",
     "@types/jest": "28.1.4",
     "@types/lodash": "^4.14.191",
     "@types/mongodb": "^3.6.20",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.0.0",
+    "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
@@ -115,7 +116,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.2.2"
   },
   "config": {
     "mongodbMemoryServer": {
