--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "antd": "^5.12.8",
@@ -14,26 +15,25 @@
     "http-proxy-middleware": "^2.0.6",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-bootstrap-icons": "^1.10.2",
+    "react-bootstrap": "^2.9.2",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.4",
-    "styled-components": "^5.3.5",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.7"
   },
   "scripts": {
-    "node-1": "env-cmd -f .env.node-1 react-scripts start",
-    "node-2": "env-cmd -f .env.node-2 react-scripts start",
-    "node-3": "env-cmd -f .env.node-3 react-scripts start",
-    "build": "react-scripts build",
+    "node-1": "env-cmd -f .env.node-1 vite --port 3201",
+    "node-2": "env-cmd -f .env.node-2 vite --port 3202",
+    "node-3": "env-cmd -f .env.node-3 vite --port 3203",
+    "build": "tsc && vite build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.{ts,tsx}\""
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -53,19 +53,18 @@
       "last 1 safari version"
     ]
   },
-  "resolutions": {
-    "styled-components": "^5"
-  },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^16.11.45",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.25",
-    "typescript": "^4.9.5"
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
