--- a/api/package.json
+++ b/api/package.json
@@ -73,9 +73,10 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "mongodb": "^3.7.3",
+    "mongodb": "^6.3.0",
     "openapi-typescript-codegen": "^0.23.0",
     "path": "^0.12.7",
+    "react": "^18.2.0",
     "react-email": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -90,25 +91,27 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@jest/test-sequencer": "^29.7.0",
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
+    "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.21",
     "@types/hdkey": "^2.0.1",
     "@types/jest": "28.1.4",
     "@types/lodash": "^4.14.191",
-    "@types/mongodb": "^3.6.20",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
     "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
+    "cookie": "^0.6.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.2",
-    "mongodb-memory-server": "^8.9.0",
+    "mongodb-memory-server": "^9.1.4",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.3.3",
