Added Public Key to the User Settings.

--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "scripts": {
-    "build-v2": "docker build -t bcr-v2 .",
-    "restart-v2": "docker container restart deposits-registry",
-    "stop-v2": "docker container stop deposits-registry",
-    "rm-v2": "docker container rm deposits-registry",
-    "start-v2": "docker run -d -p 3001:3001 --env-file ./api/.env.deposits-registry --name deposits-registry bcr-v2",
-    "logs-v2": "docker logs --tail 100000 deposits-registry",
-    "release-v2": "npm run build-v2 && npm run stop-v2 && npm run rm-v2 && npm run start-v2",
-
-    "build": "docker build -t bcr .",
-    "restart:1": "docker container restart bitcoin-registry",
-    "stop:1": "docker container stop bitcoin-registry",
-    "rm:1": "docker container rm bitcoin-registry",
-    "start:1": "docker run -d -p 3000:3000 --env-file ./api/.env.bitcoin-registry --name bitcoin-registry bcr",
-    "logs:1": "docker logs --tail 100000 bitcoin-registry",
-    "tail:1": "docker logs -f bitcoin-registry",
-
-    "restart:3": "docker container restart deposits-registry-2",
-    "stop:3": "docker container stop deposits-registry-2",
-    "rm:3": "docker container rm deposits-registry-2",
-    "start:3": "docker run -d -p 3002:3002 --env-file ./api/.env.deposits-registry-2 --name deposits-registry-2 bcr",
-    "logs:3": "docker logs --tail 100000 deposits-registry-2",
-
-    "restart:4": "docker container restart deposits-registry-3",
-    "stop:4": "docker container stop deposits-registry-3",
-    "rm:4": "docker container rm deposits-registry-3",
-    "start:4": "docker run -d -p 3003:3003 --env-file ./api/.env.deposits-registry-3 --name deposits-registry-3 bcr",
-    "logs:4": "docker logs --tail 100000 deposits-registry-3",
-
-    "rm:single": "npm run rm:1",
-    "rm:net": "npm run rm:2 && npm run rm:3 && npm run rm:4",
-    "stop:single": "npm run stop:1",
-    "stop:net": "npm run stop:2 && npm run stop:3 && npm run stop:4",
-    "start:single": "npm run start:1",
-    "start:net": "npm run start:3 && npm run start:4",
-    "restart:single": "npm run restart:1",
-    "restart:net": "npm run restart:3 && npm run restart:4",
-    "release:single": "npm run build && npm run stop:single && npm run rm:single && npm run start:single",
-    "release:net": "npm run build && npm run stop:net && npm run rm:net && npm run start:net",
-    "release": "npm run build && npm run stop:net && npm run rm:net && npm run start:net && npm run stop:single && npm run rm:single && npm run start:single"
-  }
+    "scripts": {
+        "build-v2": "docker build -t bcr-v2 .",
+        "restart-v2": "docker container restart deposits-registry",
+        "stop-v2": "docker container stop deposits-registry",
+        "rm-v2": "docker container rm deposits-registry",
+        "start-v2": "docker run -d -p 3001:3001 --env-file ./api/.env.deposits-registry --name deposits-registry bcr-v2",
+        "logs-v2": "docker logs --tail 100000 deposits-registry",
+        "release-v2": "npm run build-v2 && npm run stop-v2 && npm run rm-v2 && npm run start-v2",
+        "build": "docker build -t bcr .",
+        "restart:1": "docker container restart bitcoin-registry",
+        "stop:1": "docker container stop bitcoin-registry",
+        "rm:1": "docker container rm bitcoin-registry",
+        "start:1": "docker run -d -p 3000:3000 --env-file ./api/.env.bitcoin-registry --name bitcoin-registry bcr",
+        "logs:1": "docker logs --tail 100000 bitcoin-registry",
+        "tail:1": "docker logs -f bitcoin-registry",
+        "restart:3": "docker container restart deposits-registry-2",
+        "stop:3": "docker container stop deposits-registry-2",
+        "rm:3": "docker container rm deposits-registry-2",
+        "start:3": "docker run -d -p 3002:3002 --env-file ./api/.env.deposits-registry-2 --name deposits-registry-2 bcr",
+        "logs:3": "docker logs --tail 100000 deposits-registry-2",
+        "restart:4": "docker container restart deposits-registry-3",
+        "stop:4": "docker container stop deposits-registry-3",
+        "rm:4": "docker container rm deposits-registry-3",
+        "start:4": "docker run -d -p 3003:3003 --env-file ./api/.env.deposits-registry-3 --name deposits-registry-3 bcr",
+        "logs:4": "docker logs --tail 100000 deposits-registry-3",
+        "rm:single": "npm run rm:1",
+        "rm:net": "npm run rm:2 && npm run rm:3 && npm run rm:4",
+        "stop:single": "npm run stop:1",
+        "stop:net": "npm run stop:2 && npm run stop:3 && npm run stop:4",
+        "start:single": "npm run start:1",
+        "start:net": "npm run start:3 && npm run start:4",
+        "restart:single": "npm run restart:1",
+        "restart:net": "npm run restart:3 && npm run restart:4",
+        "release:single": "npm run build && npm run stop:single && npm run rm:single && npm run start:single",
+        "release:net": "npm run build && npm run stop:net && npm run rm:net && npm run start:net",
+        "release": "npm run build && npm run stop:net && npm run rm:net && npm run start:net && npm run stop:single && npm run rm:single && npm run start:single"
+    },
+    "dependencies": {
+        "node-forge": "^1.3.1"
+    },
+    "devDependencies": {
+        "@types/node-forge": "^1.3.11"
+    }
 }
-
