--- a/api/package.json
+++ b/api/package.json
@@ -74,6 +74,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^6.3.0",
+    "node-forge": "^1.3.1",
     "openapi-typescript-codegen": "^0.23.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -102,6 +103,7 @@
     "@types/lodash": "^4.14.191",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
+    "@types/node-forge": "^1.3.11",
     "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
