--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@hookform/error-message": "^2.0.1",
     "antd": "^5.12.8",
-    "@ant-design/icons": "^5.2.6",
     "array-buffer-to-hex": "^1.0.0",
     "bip84": "^0.2.7",
     "bootstrap": "^5.2.3",
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.1",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.7"
@@ -56,6 +57,7 @@
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
