--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "node-3": "env-cmd -f .env.node-3 vite --port 3203",
     "build": "tsc && vite build",
     "test": "react-scripts test",
+    "tsc": "tsc --noEmit --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
