--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "build": "nest build",
     "tsc": "tsc -w --pretty false --noEmit",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start:vite": "cross-env NODE_ENV=single-node vite",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:node": "nest start",
     "start:rob-node": "cross-env NODE_ENV=rob-node nest start --watch --watchAssets",
@@ -96,6 +97,7 @@
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.0",
+    "@swc/core": "^1.4.5",
     "@types/cookie": "^0.6.0",
     "@types/express": "^4.17.21",
     "@types/hdkey": "^2.0.1",
@@ -121,7 +123,10 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0",
+    "vite-plugin-node": "^3.1.0",
+    "vite-tsconfig-paths": "^4.3.1"
   },
   "config": {
     "mongodbMemoryServer": {
