--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "madge": "madge --extensions ts,tsx --circular ./src",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "tsc": "tsc -w --pretty false --noEmit",
@@ -115,6 +116,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.2",
+    "madge": "^6.1.0",
     "mongodb-memory-server": "^9.1.4",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
