--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,7 @@
     "build": "nest build",
     "tsc": "tsc -w --pretty false --noEmit",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start:vite": "cross-env NODE_ENV=single-node vite",
+    "start:vite": "cross-env NODE_ENV=local vite",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:node": "nest start",
     "start:rob-node": "cross-env NODE_ENV=rob-node nest start --watch --watchAssets",
