--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.362.0",
+    "@google-cloud/logging-winston": "^6.0.0",
     "@mempool/mempool.js": "^2.3.0",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/common": "^10.3.0",
