--- a/api/package.json
+++ b/api/package.json
@@ -77,6 +77,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^6.3.0",
+    "net": "^1.0.2",
     "node-forge": "^1.3.1",
     "openapi-typescript-codegen": "^0.23.0",
     "path": "^0.12.7",
