--- a/api/package.json
+++ b/api/package.json
@@ -102,6 +102,7 @@
     "@nestjs/testing": "^10.3.0",
     "@swc/core": "^1.4.5",
     "@types/cookie": "^0.6.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/hdkey": "^2.0.1",
     "@types/jest": "28.1.4",
