--- a/api/package.json
+++ b/api/package.json
@@ -55,6 +55,7 @@
     "@types/ws": "^8.5.4",
     "aws-sdk": "^2.1265.0",
     "axios": "^0.27.2",
+    "axios-retry": "^4.1.0",
     "bip32": "^3.1.0",
     "bip39": "^3.0.4",
     "bip84": "^0.2.7",
