--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
     "tsc": "tsc -w --pretty false --noEmit",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:vite": "cross-env NODE_ENV=local vite",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "cross-env NODE_ENV=local nest start --watch",
     "start:node": "nest start",
     "start:rob-node": "cross-env NODE_ENV=rob-node nest start --watch --watchAssets",
     "start:single-node": "cross-env NODE_ENV=single-node nest start --watch --watchAssets",
